Fixes warn when saving instances (#687)
* Use batch

* Improve doc